--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 :root {
     --rosa-fuerte: #FA8FB1;
-    --rosa-claro: #FFC1D5;
+    --blanco-roto:#F8F0E5;
+    --gris-oscuro:var#333333;
+
 }
 
 /* Estilo general */
@@ -8,7 +10,10 @@ body {
     font-family: 'Libre Baskerville', serif;
     margin: 0;
     background-color:var(--rosa-claro);
-    color:var(--rosa-fuerte);
+    color:var(--gris-oscuro);
+}
+h1, h2, h3 {
+    color: var(--rosa-fuerte); /* Títulos en rosa fuerte */
 }
 
 /* Encabezado */
@@ -55,6 +60,7 @@ section {
     padding: 40px 20px;
     max-width: 900px;
     margin: auto;
+    text-align:center;
 }
 
 h2 {
@@ -114,26 +120,25 @@ footer {
     max-width: 600px; /* Limita el ancho del texto para una mejor lectura */
     text-align: left;
 }
-/* En tu archivo style.css */
-.btn-volver-arriba {
-    position: fixed; /* Posición fija en la pantalla */
-    bottom: 20px; /* 20px desde la parte inferior */
-    right: 30px; /* 30px desde la derecha */
-    z-index: 99; /* Asegura que esté por encima de otros elementos */
+#btn-volver-arriba {
+    position: fixed; /* Lo fija en la pantalla */
+    bottom: 20px; /* A 20px del borde inferior */
+    right: 30px; /* A 30px del borde derecho */
+    z-index: 99; /* Asegura que esté encima de otros elementos */
     border: none;
     outline: none;
-    background-color: var(--rosa-fuerte);
-    color: white;
+    background-color:gray;
+    color: var grey;
     cursor: pointer;
     padding: 15px;
     border-radius: 10px;
     font-size: 18px;
-    display: none; /* Oculto por defecto */
+    display: none; /* Oculto por defecto, el JS lo mostrará */
     transition: background-color 0.3s;
 }
 
-.btn-volver-arriba:hover {
-    background-color: #d15c89;
+#btn-volver-arriba:hover {
+    background-color:var (--gris-oscuro);
 }
 /* Media Queries para pantallas pequeñas (móviles) */
 @media (max-width: 768px) {
