--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 }
 h1, h2, h3 {
     color: var(--rosa-fuerte); /* Títulos en rosa fuerte */
+    font-family: 'Poppins', sans-serif; /* Solo títulos */
 }
 
 /* Encabezado */
@@ -103,7 +104,7 @@ footer {
     display: block;
     box-shadow: 0 4px 10px rgba(0,0,0,0.3); /* sombra suave */
     margin: auto;
-    margin-top: -30px;
+    margin-top: -10px;
 }
 .sobre-mi-contenedor {
     display: flex;
