--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: var(--rosa-fuerte);
+    color: var(--azul-ligero);
     transition: 0.3s;
 }
 
