--- a/css/style.css
+++ b/css/style.css
@@ -303,3 +303,20 @@ footer {
   background: #005fcc;
   transform: scale(1.05);
 }
+.proyecto {
+  width: 45%;
+  text-align: center;
+}
+
+.proyecto img {
+  width: 100%;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  margin-bottom: 10px;
+}
+
+.proyecto p {
+  font-size: 1rem;
+  line-height: 1.4;
+  color: #333;
+}
